# GameOfLife

./: .gitignore  CMakeLists.txt  Common.h  Grid.cpp  Grid.h  GridState.cpp  GridState.h  README.md  main.cpp
.github/workflows/: ci.yml
Printers/: ConsolePrinter.cpp  ConsolePrinter.h  Printer.h
Rules/: ConwayRules.h  ReplicatorRules.h  Rules.h  SeedsRules.h
Simulation/: GridState.h  Simulation.cpp  Simulation.h
TickStrategies/: GPUTick.cpp  GPUTick.h  MultiCoreTick.cpp  MultiCoreTick.h  SingleCoreTick.cpp  SingleCoreTick.h  TickStrategy.cpp  TickStrategy.h
src/: CMakeLists.txt  Common.h  main.cpp
src/CLI/: CLIOptions.h  CLIParser.cpp  CLIParser.h
src/Config/: EdgeMode.h  GridMode.h  InitialState.h  Ruleset.h  SimulationConfig.h  TickMode.h
src/Grid/: BitGrid.cpp  BitGrid.h  DenseGrid.cpp  DenseGrid.h  EdgePolicies.h  GridState.cpp  GridState.h  NeighboursCounter.h
src/Printers/: ConsolePrinter.cpp  ConsolePrinter.h  Printer.h
src/Rules/: ConwayRules.h  ReplicatorRules.h  Rules.h  RulesBase.h  SeedsRules.h
src/Simulation/: GridState.cpp  GridState.h  ISimulation.h  Simulation.cpp  Simulation.h  SimulationAdapter.h  SimulationFactory.cpp  SimulationFactory.h
src/Simulation/Factory/: SimulationFactory.cpp  SimulationFactory.h
src/TickEngines/: GPUTick.h  MultiCoreNaiveTick.h  MultiCorePoolTick.h  MultiCoreTick.h  RowProcessor.h  SingleCoreTick.h
src/TickStrategies/: GPUTick.cpp  GPUTick.h  MultiCoreTick.cpp  MultiCoreTick.h  SingleCoreTick.cpp  SingleCoreTick.h  TickStrategy.cpp  TickStrategy.h
src/Utils/: GridStateFromASCII.cpp  GridStateFromASCII.h
tests/: CMakeLists.txt
tests/CLI/: CLIParserTests.cpp
tests/Grid/: ASCIIParserTests.cpp  BitGridTests.cpp  DenseGridTests.cpp  GridStateTests.cpp  NeighboursCounterTests.cpp
tests/Rules/: RulesNextStatesTests.cpp
tests/Simulation/: MultiCoreTickTests.cpp  NeighboursCounterTests.cpp  SimulationFactoryTests.cpp  SimulationTests.cpp  SingleCoreTickTests.cpp
